simple 663 - Firefox - text overlapped issue fixed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,6 +40,9 @@ html,
 body {
   height: 100%;
 }
+* {
+  font-family: "Lato";
+}
 body {
   font-family: "Lato" !important;
   font-size: 0.9375rem;
